<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_oshrit">

    <Button
        android:id="@+id/likeBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="82dp"
        android:background="?attr/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:onClick="likeClick"
        android:text="@string/like"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/likeCnt"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText2"
        app:layout_constraintVertical_bias="0.587" />

    <TextView
        android:id="@+id/likeCnt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:layout_marginBottom="86dp"
        android:text="@string/_0"
        android:textIsSelectable="false"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/likeBtn"
        app:layout_constraintTop_toBottomOf="@+id/nameText2"
        app:layout_goneMarginBottom="60dp" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="159dp"
        android:layout_height="38dp"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginEnd="194dp"
        android:layout_marginRight="194dp"
        android:layout_marginBottom="16dp"
        android:text="@string/name_steven_oshrit"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/nameText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/nameText2"
        android:layout_width="259dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="16dp"
        android:text="@string/he_likes_cookiecat_icecream_oshrit"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/likeCnt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="277dp"
        android:layout_height="296dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/steaven_oshrit"
        app:layout_constraintBottom_toTopOf="@+id/nameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/aa" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ImageButton
            android:id="@+id/prev_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_media_previous"
            android:layout_alignParentLeft="true"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="674dp" />

        <ImageButton
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_media_next"
            android:layout_alignParentRight="true"
            tools:layout_editor_absoluteX="351dp"
            tools:layout_editor_absoluteY="674dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>